{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 81,
  "lineage": "a3ed9ea1-e9cf-cb0f-2514-09929cf60040",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08633ae966aacb375",
            "arn": "arn:aws:ec2:us-east-1:254566860930:elastic-ip/eipalloc-08633ae966aacb375",
            "domain": "vpc",
            "id": "eipalloc-08633ae966aacb375",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-212-52-132.compute-1.amazonaws.com",
            "public_ip": "3.212.52.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "competitor-tracker-eip"
            },
            "tags_all": {
              "Name": "competitor-tracker-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254566860930:internet-gateway/igw-0145bde07528d835e",
            "id": "igw-0145bde07528d835e",
            "owner_id": "254566860930",
            "tags": {
              "Name": "competitor-tracker-igw"
            },
            "tags_all": {
              "Name": "competitor-tracker-igw"
            },
            "vpc_id": "vpc-0628e03f2276df5d4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:254566860930:targetgroup/competitor-tracker-tg/ea8a970bf2beb1ce",
            "arn_suffix": "targetgroup/competitor-tracker-tg/ea8a970bf2beb1ce",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:254566860930:targetgroup/competitor-tracker-tg/ea8a970bf2beb1ce",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "competitor-tracker-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "competitor-tracker-tg"
            },
            "tags_all": {
              "Name": "competitor-tracker-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0628e03f2276df5d4"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0145bde07528d835e",
            "id": "r-rtb-04b0c215f27de971c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04b0c215f27de971c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254566860930:route-table/rtb-04b0c215f27de971c",
            "id": "rtb-04b0c215f27de971c",
            "owner_id": "254566860930",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "competitor-tracker-public-rt"
            },
            "tags_all": {
              "Name": "competitor-tracker-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0628e03f2276df5d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0649b80d90eeb806e",
            "route_table_id": "rtb-04b0c215f27de971c",
            "subnet_id": "subnet-01a9e8eaff09f7887"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d96bced085464557",
            "route_table_id": "rtb-04b0c215f27de971c",
            "subnet_id": "subnet-0cda2d59d4f1de1e9"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254566860930:security-group/sg-06fbe6156745bee1a",
            "description": "ALB security group - inbound HTTP from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06fbe6156745bee1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "competitor-tracker-alb-sg",
            "name_prefix": "",
            "owner_id": "254566860930",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "competitor-tracker-alb-sg"
            },
            "tags_all": {
              "Name": "competitor-tracker-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0628e03f2276df5d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254566860930:security-group/sg-0dc74b82e6f655aba",
            "description": "EC2 security group - inbound from ALB, SSH from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc74b82e6f655aba",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06fbe6156745bee1a"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "competitor-tracker-ec2-sg",
            "name_prefix": "",
            "owner_id": "254566860930",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "competitor-tracker-ec2-sg"
            },
            "tags_all": {
              "Name": "competitor-tracker-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0628e03f2276df5d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254566860930:security-group/sg-0ddfa6467f91ce30e",
            "description": "RDS security group - PostgreSQL from EC2 only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ddfa6467f91ce30e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EC2",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dc74b82e6f655aba"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "competitor-tracker-rds-sg",
            "name_prefix": "",
            "owner_id": "254566860930",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "competitor-tracker-rds-sg"
            },
            "tags_all": {
              "Name": "competitor-tracker-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0628e03f2276df5d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254566860930:subnet/subnet-079718ba71f469286",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079718ba71f469286",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "254566860930",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "competitor-tracker-private-a"
            },
            "tags_all": {
              "Name": "competitor-tracker-private-a"
            },
            "vpc_id": "vpc-0628e03f2276df5d4"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254566860930:subnet/subnet-03b8ba9dbc09cbce7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b8ba9dbc09cbce7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "254566860930",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "competitor-tracker-private-c"
            },
            "tags_all": {
              "Name": "competitor-tracker-private-c"
            },
            "vpc_id": "vpc-0628e03f2276df5d4"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254566860930:subnet/subnet-01a9e8eaff09f7887",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a9e8eaff09f7887",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "254566860930",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "competitor-tracker-public-a"
            },
            "tags_all": {
              "Name": "competitor-tracker-public-a"
            },
            "vpc_id": "vpc-0628e03f2276df5d4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254566860930:subnet/subnet-0cda2d59d4f1de1e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cda2d59d4f1de1e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "254566860930",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "competitor-tracker-public-c"
            },
            "tags_all": {
              "Name": "competitor-tracker-public-c"
            },
            "vpc_id": "vpc-0628e03f2276df5d4"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:254566860930:vpc/vpc-0628e03f2276df5d4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a94b5270ef676be7",
            "default_route_table_id": "rtb-0143ddce872fbe860",
            "default_security_group_id": "sg-073530e4746552c60",
            "dhcp_options_id": "dopt-090a74b9a2cc59c96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0628e03f2276df5d4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0143ddce872fbe860",
            "owner_id": "254566860930",
            "tags": {
              "Name": "competitor-tracker-vpc"
            },
            "tags_all": {
              "Name": "competitor-tracker-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}